fix white space on top of `.react-terminal-line`

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -87,3 +87,7 @@ div > .react-terminal-wrapper {
 div .react-terminal-line {
   @apply whitespace-pre-wrap text-base leading-5;
 }
+
+div .react-terminal-line::before {
+  content: none;
+}
